--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -424,4 +424,7 @@
 
     <!-- Failed action error message: e.g. Failed: Pause -->
     <string name="remote_action_failed">Failed: <xliff:g id="what" example="Pause">%1$s</xliff:g></string>
+    
+    <string name="pref_suggestions_title">Suggestions</string>
+    <string name="pref_suggestions_summary">For all Apps and Home screen</string>
 </resources>
